# acbotics_display_widgets

./: README.md  build_wheel.sh  pyproject.toml
examples/: acbotics_demo_display.py  acbotics_demo_fixture.py
src/acbotics_display_widgets/: __init__.py  logger_tab.py  pressure_time_view.py  sensor_list_tab.py  sensor_series_tab.py  sensor_time_series_view.py  spectrogram_tab.py  spectrogram_view.py  time_series_tab.py
src/acbotics_display_widgets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
